--- a/src/public/style.css
+++ b/src/public/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding: 20px;
 }
 
 h1 {
@@ -7,10 +8,10 @@ h1 {
   color: #333;
   text-shadow: 2px 2px 4px #555;
   text-transform: uppercase;
-  font-size: 45px;
+  font-size: 50px;
   font-weight: 500;
-  margin-bottom: 50px;
-  margin-top: 50px;
+  margin-bottom: 70px;
+  margin-top: 40px;
   letter-spacing: 1px;
 }
 
@@ -19,11 +20,14 @@ h1 {
   height: 500px;
   padding: 15px 12px;
   margin: 20px auto;
-  border: 1.5px solid #999;
+  border: 2px solid rgb(202, 202, 202);
+  transform: scale(0.88, 0.88);
   transition: border 0.2s linear;
+  transition: transform 0.25s ease;
 }
 
 .graph-style:hover {
-  border: 1.5px solid #1e272e;
-  box-shadow: 1px 1px 2px #555;
+  border: 2px solid #1e272e;
+  transform: scale(0.95, 0.95);
+  box-shadow: 0 0 8px 1px #555;
 }
